[project]
name = "antigravity-mcp-airflow-duckdb-pipeline-pull-data-from-youtube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.5",
    "duckdb>=1.4.3",
    "requests>=2.32.5",
    "youtube-transcript-api>=1.2.3",
]
